<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#002DEB"
    tools:context=".MainActivity">

    <View
        android:id="@+id/resultTextLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="#002DEB"
        android:elevation="5dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status">

    </View>


    <TextView
        android:id="@+id/resultText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:padding="5dp"
        android:text="Resultado"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:visibility="gone"
        app:fontFamily="@font/archivo_black"
        app:layout_constraintEnd_toEndOf="@+id/resultTextLayout"
        app:layout_constraintStart_toStartOf="@id/resultTextLayout"
        app:layout_constraintTop_toTopOf="@+id/resultTextLayout" />

    <TextView
        android:id="@+id/restartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="#fff"
        android:elevation="5dp"
        android:onClick="restartGame"
        android:padding="10dp"
        android:shadowColor="#000"
        android:text="@string/restartButtonText"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:visibility="gone"
        app:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="@+id/resultTextLayout"
        app:layout_constraintEnd_toStartOf="@+id/resultTextLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/resultTextLayout" />

    <View
        android:id="@+id/resultButtonLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="#002DEB"
        android:elevation="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status"
        app:layout_constraintVertical_bias="0.0">

    </View>

    <TextView
        android:id="@+id/resultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:elevation="4dp"
        android:onClick="getResult"
        android:padding="10dp"
        android:shadowColor="#000"
        android:text="@string/resultButtonText"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:visibility="gone"
        app:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="@id/resultButtonLayout"
        app:layout_constraintEnd_toEndOf="@+id/resultButtonLayout"
        app:layout_constraintStart_toStartOf="@id/resultButtonLayout"
        app:layout_constraintTop_toTopOf="@+id/resultButtonLayout" />

    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/homelander_base" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/defaultQuestion"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainImage" />

    <Button
        android:id="@+id/option1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:background="#fff"
        android:onClick="clickOption1"
        android:text="@string/defaultOption1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainImage" />

    <Button
        android:id="@+id/option3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#fff"
        android:onClick="clickOption3"
        android:text="@string/defaultOption3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option2" />

    <Button
        android:id="@+id/option2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#fff"
        android:onClick="clickOption2"
        android:text="@string/defaultOption2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option1" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/defaultStatus"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:fontFamily="@font/archivo_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainImage" />

</androidx.constraintlayout.widget.ConstraintLayout>